Section8 - 115. Validation with Decorators

--- a/section-8-decorators/index.html
+++ b/section-8-decorators/index.html
@@ -10,5 +10,11 @@
   <body>
     <div id="app"></div>
     <button>클릭!</button>
+
+    <form>
+      <input type="text" name="" id="title" placeholder="강좌 제목" />
+      <input type="text" name="" id="price" placeholder="가격" />
+      <button type="submit">저장</button>
+    </form>
   </body>
 </html>
